--- a/page3.html
+++ b/page3.html
@@ -81,11 +81,14 @@
       <h1 id ="titleText">What Can We Do?</h1>
     </div>
     <div id = "mainContainer">
-      <p id ="paragraph">Think about why you like your favorite song.
-        If it is, try to find out who produced it, and what other songs
-        they've worked on. Not only will this allow you to find out other
-      songs that may interest you, you are also showing support to Producers
-  </p>
+      <p id ="paragraph">Think about why you like your favorite song
+        and try to find out who produced it, and explore what other songs
+        they've worked on.
+          </p>
+        <p id ="paragraph">
+      Not only will this allow you to find out other
+      songs that may interest you, you are also showing support!
+      </p>
     </div>
     <div id="leftContainer">
        <p><a href ="https://www.theguardian.com/music/2015/aug/20/paid-in-full-are-hip-hop-producers-being-exploited"> Article</p>
