--- a/page2.html
+++ b/page2.html
@@ -9,25 +9,25 @@
 
 
         <video id ="video1" class= "video"  muted>
-          <source src ="clips/kennyClip2.mp4" type="video/mp4">
+          <source src ="clips/KennyClip2.mp4" type="video/mp4">
         </video>
         <video id ="video2" class= "video"  muted>
-          <source src ="clips/alchemistClip.mp4" type="video/mp4">
+          <source src ="clips/AlchemistClip.mp4" type="video/mp4">
           </video>
         <video id ="video3" class= "video"  muted>
-          <source src ="clips/kennyClip.mp4" type="video/mp4">
+          <source src ="clips/KennyClip.mp4" type="video/mp4">
         </video>
         <video id ="video4" class= "video"  muted>
-          <source src ="clips/alchemistClip2.mp4" type="video/mp4">
+          <source src ="clips/AlchemistClip2.mp4" type="video/mp4">
         </video>
         <video id ="video5" class= "video"  muted>
-          <source src ="clips/daringerClip2.mp4" type="video/mp4">
+          <source src ="clips/DaringerClip2.mp4" type="video/mp4">
         </video>
         <video id ="video6" class= "video"  muted>
-          <source src ="clips/alchemistClip3.mp4" type="video/mp4">
+          <source src ="clips/AlchemistClip3.mp4" type="video/mp4">
         </video>
         <video id ="video7" class= "video"  muted>
-          <source src ="clips/daringerClip.mp4" type="video/mp4">
+          <source src ="clips/DaringerClip.mp4" type="video/mp4">
         </video>
         <!--JavaScript to cycle through clips-->
       <script>
